Add main structure to the index file

--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
     <title>Love Vegetables</title>
 </head>
 <body>
+    <header>
+        logo
+        navigation links
+    </header>
+
+    <section>
+        welcome message
+        start button
+    </section>
+
+    <footer>
+        social media links
+    </footer>
     
     <!--==========Link to JavaScript file==========-->
     <script src="assets/js/script.js"></script>
