Create two new files and add content to the index file

--- a/index.html
+++ b/index.html
@@ -10,18 +10,60 @@
     <title>Love Vegetables</title>
 </head>
 <body>
-    <header>
-        logo
-        navigation links
+    <!--==========HEADER==========-->
+    <header id="header">
+   
+        <!--==========Logo==========-->
+        <a href="index.html">
+            <h1 id="logo">Love Vegetables</h1>
+        </a>
+
+        <!--==========Navigation Links==========-->
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html" class="active">Home</a>
+                </li>
+                <li>
+                    <a href="quiz.html">Quiz</a>
+                </li>
+                <li>
+                    <a href="help.html">Help</a>
+                </li>
+             </ul>
+        </nav>
     </header>
 
+    <!--==========Main Section==========-->
     <section>
-        welcome message
-        start button
+        <div>
+            <h2>Ready to play</h2>
+
+            <!--==========Button to link the Quiz page==========-->
+            <a href="quiz.html" class="start-btn">Start Quiz</a>
+        </div>
     </section>
 
+        <!--==========FOOTER==========-->
     <footer>
-        social media links
+        
+        <!--==========Social media Links==========-->
+        <div id="social-media">
+            <ul>
+                <li>
+                    <a href="https://facebook.com" target="_blank" rel="noopener" title="facebook"
+                    aria-label="Visit our Facebook page (opens in the new tab"></a>
+                </li> 
+                <li>
+                    <a href="https://instagram.com" target="_blank" rel="noopener" title="instagram"
+                    aria-label="Visit our Instagram page (opens in the new tab"></a>
+                </li> 
+                <li>
+                    <a href="https://youtube.com" target="_blank" rel="noopener" title="youtube"
+                    aria-label="Visit our YouTube page (opens in the new tab"></a>
+                </li> 
+            </ul>
+        </div>
     </footer>
     
     <!--==========Link to JavaScript file==========-->
