Add fonts awesome links

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+     <!--==========Font Awesome==========-->
+     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" 
+     integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+ 
+
     <!--==========Link to Style CSS file==========-->
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Love Vegetables</title>
@@ -37,7 +42,7 @@
     <!--==========Main Section==========-->
     <section>
         <div>
-            <h2>Ready to play</h2>
+            <h2>Ready to play <i class="fas fa-question"></i></h2>
 
             <!--==========Button to link the Quiz page==========-->
             <a href="quiz.html" class="start-btn">Start Quiz</a>
@@ -52,15 +57,18 @@
             <ul>
                 <li>
                     <a href="https://facebook.com" target="_blank" rel="noopener" title="facebook"
-                    aria-label="Visit our Facebook page (opens in the new tab"></a>
+                    aria-label="Visit our Facebook page (opens in the new tab">
+                    <i class="fab fa-facebook-square"></i></a>
                 </li> 
                 <li>
                     <a href="https://instagram.com" target="_blank" rel="noopener" title="instagram"
-                    aria-label="Visit our Instagram page (opens in the new tab"></a>
+                    aria-label="Visit our Instagram page (opens in the new tab">
+                    <i class="fab fa-instagram-square"></i></a>
                 </li> 
                 <li>
                     <a href="https://youtube.com" target="_blank" rel="noopener" title="youtube"
-                    aria-label="Visit our YouTube page (opens in the new tab"></a>
+                    aria-label="Visit our YouTube page (opens in the new tab">
+                    <i class="fab fa-youtube-square"></i></a>
                 </li> 
             </ul>
         </div>
