--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <!--==========Navigation Links==========-->
         <nav>
-            <ul>
+            <ul id="menu">
                 <li>
                     <a href="index.html" class="active">Home</a>
                 </li>
@@ -39,11 +39,12 @@
         </nav>
     </header>
 
-    <!--==========Main Section==========-->
-    <section>
-        <div>
-            <h2>Ready to play <i class="fas fa-question"></i></h2>
-
+    <!--==========MAIN SECTION==========-->
+    <section id="main">
+        <div id="main-page">
+            <h2 id="text">Ready to play <i class="fas fa-question"></i></h2>
+            <br> <br>
+            
             <!--==========Button to link the Quiz page==========-->
             <a href="quiz.html" class="start-btn">Start Quiz</a>
         </div>
