Add instructions to index file contents and style the rules box

--- a/index.html
+++ b/index.html
@@ -44,9 +44,29 @@
         <div id="main-page">
             <h2 id="text">Ready to play <i class="fas fa-question"></i></h2>
             <br> <br>
-            
+
             <!--==========Button to link the Quiz page==========-->
             <a href="quiz.html" class="start-btn">Start Quiz</a>
+        </div>
+
+        <!--==========Instruction Box==========-->
+        <div id="rules-box">
+            <div class="rules-title">
+                <span>Instructions</span>
+            </div>
+            <div class="rules-list">
+                <div class="rule">1. You will have only <span>20 seconds</span> per each question.</div>
+                <div class="rule">2. The seconds will start counting once you press Start Quiz</div>
+                <div class="rule">3. Once you select your answer, you can't reselect.</div>
+                <div class="rule">4. You can't select any option once time goes off.</div>
+                <div class="rule">5. You will get your result at the end.</div>
+            </div>
+
+            <!--==========Quit and Restart buttons==========-->
+            <div class="buttons">
+                <button class="quit">Exit Quiz</button>
+                <button class="restart">Continue</button>
+            </div>
         </div>
     </section>
 
