--- a/quiz.html
+++ b/quiz.html
@@ -39,8 +39,47 @@
         </nav>
     </header>
 
-    <section>
-        
+    <!--==========QUIZ BOX==========-->
+    <section id="main">
+        <div id="quiz-box">
+    
+            <!--==========Timer==========-->
+            <div class="timer">
+                <div class="time-left">Time Left</div>
+                <div class="timer-seconds">20</div>
+            </div>
+
+    <!--==========QUESTIONS AND OPTIONS LIST==========-->
+            <div class="questions-text">
+                <span>Which of these vegetables was the first to be grown in space?</span>
+            </div>
+            <div class="option-list">
+                <div class="option">
+                    <span>Radish</span>
+                    <div class="tick-cross"><i class="fas fa-times"></i></div>
+                </div>
+                <div class="option">
+                    <span>Peas</span>
+                    <div class="tick-cross"><i class="fas fa-times"></i></div>
+                </div>
+                <div class="option">
+                    <span>Swede</span>
+                    <div class="tick-cross"><i class="fas fa-times"></i></div>
+                </div>
+                <div class="option">
+                    <span>Potato</span>
+                    <div class="tick-icon"><i class="fas fa-check"></i></div>
+                </div>
+            </div>
+
+            <div>
+                <div class="total-question">
+                <span><p>2</p>Of<p>5</p>Questions</span>
+                </div>
+
+                <button class="next-btn">Next</button>
+            </div>
+        </div>
     </section>
 
     <!--==========FOOTER==========-->
