Add and style content to quiz page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </header>
 
     <!--==========MAIN SECTION==========-->
-    <section id="main">
+    <section id="home-area">
         <div id="main-page">
             <h2 id="text">Ready to play <i class="fas fa-question"></i></h2>
             <br> <br>
