--- a/quiz.html
+++ b/quiz.html
@@ -87,6 +87,22 @@
         </div>
     </section>
 
+    <!--==========FEEDBACK BOX==========-->
+
+    <div id="feedback-box">
+        <div class="icon">
+            <i class="fas fa-crown"></i>
+        </div>
+        <div class="complete-text">You've completed the Quiz!</div>
+        <div class="score-text">
+            <span>and sorry, You got only <p>2</p> out of <p>5</p></span>
+        </div>
+        <div class="buttons">
+            <button class="restart">Replay Quiz</button>
+            <button class="quit">Quit Quiz</button>
+        </div>
+    </div>
+
     <!--==========FOOTER==========-->
     <footer>
         
