Add content to help page

--- a/help.html
+++ b/help.html
@@ -39,7 +39,57 @@
         </nav>
     </header>
 
-    <section>
+    <section id="help-area">
+        <div id="help-box">
+
+            <!--==========How to play division==========-->
+            <div>
+                <h2>How to play <i class="fas fa-question"></i></h2>
+                <br>
+                    <span>1. Follow instructions</span>
+                    <span>2. Click on <a href="quiz.html" class="link">Start Quiz</a></span>
+                    <span>3. And start playing!!!</span>
+            </div>
+            <br>
+
+            <!--==========Need more help division==========-->
+            <div>
+                <h2>Need more help <i class="fas fa-question"></i></h2>
+                <br>
+                <p>Do you have further questions? Contact us!</p>
+            </div>
+            <br>
+
+            <!--==========Form==========-->
+            <div>
+                <form action="lumbe.georgette@gmail.com" name="contact-form"  method="POST">
+
+                    <!--==========Input==========-->
+                    <div>
+                        <label for="fname">Full name:</label>
+                        <input type="text" id="fname" name="fullname" placeholder="Jim Smith" required>
+                    </div>
+                    <div>
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="fullname" placeholder="jim@example.com" required>
+                    </div>
+                    <br>
+
+                    <!--==========Textarea==========-->
+                    <div>
+                        <textarea name="question" id="text" cols="15" rows="50" placeholder="Type your message here..."></textarea>
+                    </div>
+
+                    <!--==========Send and Clear buttons-->
+                    <div>
+                        <input type="submit" name="send" class="send-button" value="Send">
+                        <input type="submit" name="clear" class="clear-button" value="Clear">
+                    </div>
+                </div>
+                </form>
+            </div>
+            
+
         
     </section>
 
