--- a/quiz.html
+++ b/quiz.html
@@ -97,6 +97,8 @@
         <div class="score-text">
             <span>and sorry, You got only <p>2</p> out of <p>5</p></span>
         </div>
+
+        <!--==========Restart and quit quiz==========-->
         <div class="buttons">
             <button class="restart">Replay Quiz</button>
             <button class="quit">Quit Quiz</button>
