Delete an image and center help box content

--- a/help.html
+++ b/help.html
@@ -27,13 +27,13 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="index.html" class="active">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="quiz.html">Quiz</a>
                 </li>
                 <li>
-                    <a href="help.html">Help</a>
+                    <a href="help.html"  class="active">Help</a>
                 </li>
              </ul>
         </nav>
@@ -77,7 +77,7 @@
 
                     <!--==========Textarea==========-->
                     <div>
-                        <textarea name="question" id="text" cols="15" rows="50" placeholder="Type your message here..."></textarea>
+                        <textarea name="question" id="text" cols="50" rows="15" placeholder="Type your message here..."></textarea>
                     </div>
 
                     <!--==========Send and Clear buttons-->
