Change color and update quiz box

--- a/quiz.html
+++ b/quiz.html
@@ -80,7 +80,7 @@
             </div>
 
             <!--==========Next and Restart button-->
-            <div class="bottom">
+            <div class="buttons">
                 <button class="restart">Restart</button>
                 <button class="next-btn">Next</button>
             </div>
