Add table of content and user stories

--- a/help.html
+++ b/help.html
@@ -46,9 +46,11 @@
             <div>
                 <h2>How to play <i class="fas fa-question"></i></h2>
                 <br>
-                    <span>1. Follow instructions</span>
-                    <span>2. Click on <a href="quiz.html" class="link">Start Quiz</a></span>
-                    <span>3. And start playing!!!</span>
+                <ol>
+                    <li>Follow instructions</li>
+                    <li>Click on <a href="quiz.html" class="link">Start Quiz</a></li>
+                    <li>And start playing!!!</li>
+                </ol>
             </div>
             <br>
 
@@ -69,6 +71,7 @@
                         <label for="fname">Full name:</label>
                         <input type="text" id="fname" name="fullname" placeholder="Jim Smith" required>
                     </div>
+                    <br>
                     <div>
                         <label for="email">Email:</label>
                         <input type="email" id="email" name="fullname" placeholder="jim@example.com" required>
