Change start quiz anchor to a button and hide rules box

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-     <!--==========Font Awesome==========-->
+     <!--==========Font Awesome for icons==========-->
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" 
      integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
  
@@ -46,7 +46,7 @@
             <br> <br>
 
             <!--==========Button to link the Quiz page==========-->
-            <a href="quiz.html" class="start-btn">Start Quiz</a>
+            <button class="start-btn">Start Quiz</button>
         </div>
 
         <!--==========Instruction Box==========-->
