Change all hyphens to undescores in html and style css files

--- a/help.html
+++ b/help.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-     <!--==========Font Awesome==========-->
+     <!--==========Font Awesome for icons==========-->
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" 
      integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
  
@@ -39,8 +39,8 @@
         </nav>
     </header>
 
-    <section id="help-area">
-        <div id="help-box">
+    <section id="help_area">
+        <div id="help_box">
 
             <!--==========How to play division==========-->
             <div>
@@ -85,8 +85,8 @@
 
                     <!--==========Send and Clear buttons-->
                     <div>
-                        <input type="submit" name="send" class="send-button" value="Send">
-                        <input type="submit" name="clear" class="clear-button" value="Clear">
+                        <input type="submit" name="send" class="send_button" value="Send">
+                        <input type="submit" name="clear" class="clear_button" value="Clear">
                     </div>
                 </div>
                 </form>
@@ -100,7 +100,7 @@
     <footer>
         
         <!--==========Social media Links==========-->
-        <div id="social-media">
+        <div id="social_media">
             <ul>
                 <li>
                     <a href="https://facebook.com" target="_blank" rel="noopener" title="facebook"
