--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
     </header>
 
     <!--==========MAIN SECTION==========-->
-    <section id="home-area">
-        <div id="main-page">
+    <section id="home_area">
+        <div id="main_page">
             <h2 id="text">Ready to play <i class="fas fa-question"></i></h2>
             <br> <br>
 
             <!--==========Button to link the Quiz page==========-->
-            <button class="start-btn">Start Quiz</button>
+            <button class="start_btn">Start Quiz</button>
         </div>
 
         <!--==========Instruction Box==========-->
-        <div id="rules-box">
-            <div class="rules-title">
+        <div id="rules_box">
+            <div class="rules_title">
                 <span>Instructions</span>
             </div>
-            <div class="rules-list">
+            <div class="rules_list">
                 <div class="rule">1. You will have only <span>20 seconds</span> per each question.</div>
                 <div class="rule">2. The seconds will start counting once you press Start Quiz</div>
                 <div class="rule">3. Once you select your answer, you can't reselect.</div>
@@ -74,7 +74,7 @@
     <footer>
         
         <!--==========Social media Links==========-->
-        <div id="social-media">
+        <div id="social_media">
             <ul>
                 <li>
                     <a href="https://facebook.com" target="_blank" rel="noopener" title="facebook"
