--- a/quiz.html
+++ b/quiz.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-     <!--==========Font Awesome==========-->
+     <!--==========Font Awesome for icons==========-->
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" 
      integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
  
@@ -40,41 +40,41 @@
     </header>
 
     <!--==========QUIZ BOX==========-->
-    <section id="quiz-area">
-        <div id="quiz-box">
+    <section id="quiz_area">
+        <div id="quiz_box">
 
-            <div class="quiz-top">
-                <div class="total-question">
+            <div class="quiz_top">
+                <div class="total_question">
                     <span><p>2</p>of<p>5</p>Questions</span>
                 </div>
                 <!--==========Timer==========-->
                 <div class="timer">
-                    <div class="time-text">Time Left</div>
-                    <div class="timer-seconds">20</div>
+                    <div class="time_text">Time Left</div>
+                    <div class="timer_seconds">20</div>
                 </div>
             </div>
 
     <!--==========QUESTIONS AND OPTIONS LIST==========-->
             <div class="questions">
-                <div class="questions-text">
+                <div class="questions_text">
                     <span>Which of these vegetables was the first to be grown in space?</span>
                 </div>
-                <div class="option-list">
+                <div class="option_list">
                     <div class="option">
                         <span>Radish</span>
-                        <div class="icon-cross"><i class="fas fa-times"></i></div>
+                        <div class="icon_cross"><i class="fas fa-times"></i></div>
                     </div>
                     <div class="option">
                         <span>Peas</span>
-                        <div class="icon-cross"><i class="fas fa-times"></i></div>
+                        <div class="icon_cross"><i class="fas fa-times"></i></div>
                     </div>
                     <div class="option">
                         <span>Swede</span>
-                        <div class="icon-cross"><i class="fas fa-times"></i></div>
+                        <div class="icon_cross"><i class="fas fa-times"></i></div>
                     </div>
                     <div class="option">
                         <span>Potato</span>
-                        <div class="icon-tick"><i class="fas fa-check"></i></div>
+                        <div class="icon_tick"><i class="fas fa-check"></i></div>
                     </div>
                 </div>
             </div>
@@ -82,19 +82,19 @@
             <!--==========Next and Restart button-->
             <div class="buttons">
                 <button class="restart">Restart</button>
-                <button class="next-btn">Next</button>
+                <button class="next_btn">Next</button>
             </div>
         </div>
     </section>
 
     <!--==========FEEDBACK BOX==========-->
 
-    <div id="feedback-box">
+    <div id="feedback_box">
         <div class="icon">
             <i class="fas fa-crown"></i>
         </div>
-        <div class="complete-text">You've completed the Quiz!</div>
-        <div class="score-text">
+        <div class="complete_text">You've completed the Quiz!</div>
+        <div class="score_text">
             <span>and sorry, You got only <p>2</p> out of <p>5</p></span>
         </div>
 
@@ -109,7 +109,7 @@
     <footer>
         
         <!--==========Social media Links==========-->
-        <div id="social-media">
+        <div id="social_media">
             <ul>
                 <li>
                     <a href="https://facebook.com" target="_blank" rel="noopener" title="facebook"
