Create an array and pass number, questions, options and answers

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
 
         <!--==========Instruction Box==========-->
-        <div class="rules_box">
+        <div class="rules_box activeRule">
             <div class="rules_title">
                 <span>Instructions</span>
             </div>
