Create and add questions to JS questions file and connect it to all html files

--- a/index.html
+++ b/index.html
@@ -97,5 +97,6 @@
     
     <!--==========Link to JavaScript file==========-->
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/questions.js"></script>
 </body>
 </html>
