--- a/quiz.html
+++ b/quiz.html
@@ -57,7 +57,7 @@
     <!--==========QUESTIONS AND OPTIONS LIST==========-->
             <div class="questions">
                 <div class="questions_text">
-                    <span>Which of these vegetables was the first to be grown in space?</span>
+                   <span>Which of these vegetables was the first to be grown in space?</span>
                 </div>
                 <div class="option_list">
                     <div class="option">
@@ -132,5 +132,6 @@
     
     <!--==========Link to JavaScript file==========-->
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/questions.js"></script>
 </body>
 </html>
