--- a/help.html
+++ b/help.html
@@ -123,5 +123,6 @@
     
     <!--==========Link to JavaScript file==========-->
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/questions.js"></script>
 </body>
 </html>
