Put start button alone in div and link it to rules box

--- a/index.html
+++ b/index.html
@@ -41,16 +41,15 @@
 
     <!--==========MAIN SECTION==========-->
     <section id="home_area">
-        <div id="main_page">
-            <h2 id="text">Ready to play <i class="fas fa-question"></i></h2>
-            <br> <br>
+        <!---<div class="text">
+            <h2>Ready to play <i class="fas fa-question"></i></h2>
+        </div>-->
 
-            <!--==========Button to link the Quiz page==========-->
-            <button class="start_btn">Start Quiz</button>
-        </div>
+        <!--==========Button to link the Quiz page==========-->
+        <div class="start_btn"><button>Start Quiz</button></div>
 
         <!--==========Instruction Box==========-->
-        <div class="rules_box activeRule">
+        <div class="rules_box">
             <div class="rules_title">
                 <span>Instructions</span>
             </div>
