Fix some errors

--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
             <!--==========Quit and Restart buttons==========-->
             <div class="buttons">
                 <button class="quit">Exit Quiz</button>
-                <button class="restart">Continue</button>
-            </div>
+                <a href="quiz.html"><button class="restart">Continue</button></a>
         </div>
     </section>
 
