--- a/quiz.html
+++ b/quiz.html
@@ -55,7 +55,7 @@
             </div>
 
     <!--==========QUESTIONS AND OPTIONS LIST==========-->
-            <div class="questions">
+            <div class="quiz_questions">
                 <div class="questions_text">
                    <span>Which of these vegetables was the first to be grown in space?</span>
                 </div>
