Transfer quiz box to index html, link continue button to it and link the first question to the quiz box

--- a/index.html
+++ b/index.html
@@ -64,9 +64,57 @@
             <!--==========Quit and Restart buttons==========-->
             <div class="buttons">
                 <button class="quit">Exit Quiz</button>
-                <a href="quiz.html"><button class="restart">Continue</button></a>
+                <button class="restart">Continue</button>
         </div>
     </section>
+
+     <!--==========QUIZ BOX==========-->
+     <!--<section class="quiz_area">-->
+        <div class="quiz_box">
+
+            <div class="quiz_top">
+                <div class="total_question">
+                    <span><p>2</p>of<p>5</p>Questions</span>
+                </div>
+                <!--==========Timer==========-->
+                <div class="timer">
+                    <div class="time_text">Time Left</div>
+                    <div class="timer_seconds">20</div>
+                </div>
+            </div>
+
+    <!--==========QUESTIONS AND OPTIONS LIST==========-->
+            <div class="quiz_questions">
+                <div class="questions_text">
+                   <!--<span>Which of these vegetables was the first to be grown in space?</span>-->
+                </div>
+                <div class="option_list">
+                    <div class="option">
+                        <span>Radish</span>
+                        <div class="icon_cross"><i class="fas fa-times"></i></div>
+                    </div>
+                    <div class="option">
+                        <span>Peas</span>
+                        <div class="icon_cross"><i class="fas fa-times"></i></div>
+                    </div>
+                    <div class="option">
+                        <span>Swede</span>
+                        <div class="icon_cross"><i class="fas fa-times"></i></div>
+                    </div>
+                    <div class="option">
+                        <span>Potato</span>
+                        <div class="icon_tick"><i class="fas fa-check"></i></div>
+                    </div>
+                </div>
+            </div>
+
+            <!--==========Next and Restart button-->
+            <div class="buttons">
+                <button class="restart">Restart</button>
+                <button class="next_btn">Next</button>
+            </div>
+        </div>
+    <!--</section>-->
 
         <!--==========FOOTER==========-->
     <footer>
