--- a/quiz.html
+++ b/quiz.html
@@ -40,25 +40,25 @@
     </header>
 
     <!--==========QUIZ BOX==========-->
-    <section id="quiz_area">
+    <!--<section id="quiz_area">
         <div id="quiz_box">
 
             <div class="quiz_top">
                 <div class="total_question">
                     <span><p>2</p>of<p>5</p>Questions</span>
-                </div>
+                </div>-->
                 <!--==========Timer==========-->
-                <div class="timer">
+                <!--<div class="timer">
                     <div class="time_text">Time Left</div>
                     <div class="timer_seconds">20</div>
                 </div>
-            </div>
+            </div>-->
 
     <!--==========QUESTIONS AND OPTIONS LIST==========-->
-            <div class="quiz_questions">
-                <div class="questions_text">
-                   <span>Which of these vegetables was the first to be grown in space?</span>
-                </div>
+            <!--<div class="quiz_questions">
+                <div class="questions_text">-->
+                   <!--<span>Which of these vegetables was the first to be grown in space?</span>-->
+                <!--</div>
                 <div class="option_list">
                     <div class="option">
                         <span>Radish</span>
@@ -77,15 +77,15 @@
                         <div class="icon_tick"><i class="fas fa-check"></i></div>
                     </div>
                 </div>
-            </div>
+            </div>-->
 
             <!--==========Next and Restart button-->
-            <div class="buttons">
+            <!--<div class="buttons">
                 <button class="restart">Restart</button>
                 <button class="next_btn">Next</button>
             </div>
         </div>
-    </section>
+    </section>-->
 
     <!--==========FEEDBACK BOX==========-->
 
