--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </section>
 
      <!--==========QUIZ BOX==========-->
-     <!--<section class="quiz_area">-->
+     <section>
         <div class="quiz_box">
 
             <div class="quiz_top">
@@ -114,7 +114,7 @@
                 <button class="next_btn">Next</button>
             </div>
         </div>
-    <!--</section>-->
+    </section>
 
         <!--==========FOOTER==========-->
     <footer>
