Get questions and options from array and change let to const where necessary

--- a/index.html
+++ b/index.html
@@ -89,22 +89,20 @@
                    <!--<span>Which of these vegetables was the first to be grown in space?</span>-->
                 </div>
                 <div class="option_list">
+                <!--<div class="option">
+                        <span>Potato</span>
+                        <div class="icon_tick"><i class="fas fa-check"></i></div>
+                    </div>
                     <div class="option">
                         <span>Radish</span>
                         <div class="icon_cross"><i class="fas fa-times"></i></div>
                     </div>
                     <div class="option">
                         <span>Peas</span>
-                        <div class="icon_cross"><i class="fas fa-times"></i></div>
                     </div>
                     <div class="option">
                         <span>Swede</span>
-                        <div class="icon_cross"><i class="fas fa-times"></i></div>
-                    </div>
-                    <div class="option">
-                        <span>Potato</span>
-                        <div class="icon_tick"><i class="fas fa-check"></i></div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
 
