--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
             <div class="quiz_top">
                 <div class="total_question">
-                    <span><p>2</p>of<p>5</p>Questions</span>
+                    <!--<span><p>2</p>of<p>5</p>Questions</span>-->
                 </div>
                 <!--==========Timer==========-->
                 <div class="timer">
