Uncomment class text and position it above start button

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
     <!--==========MAIN SECTION==========-->
     <section id="home_area">
-        <!---<div class="text">
+        <div class="text">
             <h2>Ready to play <i class="fas fa-question"></i></h2>
-        </div>-->
+        </div>
 
         <!--==========Button to link the Quiz page==========-->
         <div class="start_btn"><button>Start Quiz</button></div>
