Style the help box

--- a/help.html
+++ b/help.html
@@ -40,7 +40,7 @@
     </header>
 
     <section id="help_area">
-        <div id="help_box">
+        <div class="help_box">
 
             <!--==========How to play division==========-->
             <div>
@@ -48,7 +48,7 @@
                 <br>
                 <ol>
                     <li>Follow instructions</li>
-                    <li>Click on <a href="quiz.html" class="link">Start Quiz</a></li>
+                    <li class="link">Click on <span>Start Quiz</span></li>
                     <li>And start playing!!!</li>
                 </ol>
             </div>
@@ -85,8 +85,9 @@
 
                     <!--==========Send and Clear buttons-->
                     <div>
-                        <input type="submit" name="send" class="send_button" value="Send">
                         <input type="submit" name="clear" class="clear_button" value="Clear">
+                        <input type="submit" name="send" class="send_button" value="Send">
+                        
                     </div>
                 </div>
                 </form>
