Add, style and set the time line

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                     <div class="time_text">Time Left</div>
                     <div class="timer_seconds">20</div>
                 </div>
+                <div class="time_line"></div>
             </div>
 
     <!--==========QUESTIONS AND OPTIONS LIST==========-->
