Fix positioning error to quiz box

--- a/index.html
+++ b/index.html
@@ -72,18 +72,21 @@
      <section>
         <div class="quiz_box">
 
-            <div class="quiz_icons">
-                <div class="refresh"><i class="fas fa-redo-alt"></i></div>
-                <div class="leave"><i class="fas fa-times"></i></div>
-            </div>
             <div class="quiz_top">
                 <!--==========Timer==========-->
                 <div class="timer">
                     <div class="time_text">Time Left</div>
                     <div class="timer_seconds">20</div>
                 </div>
+
+                <!--==========Refresh and Leave icons==========-->
+                <div class="quiz_icons">
+                    <div class="refresh"><i class="fas fa-redo-alt"></i></div>
+                    <div class="leave"><i class="fas fa-times"></i></div>
+                </div>
                 <div class="time_line"></div>
             </div>
+            
 
     <!--==========QUESTIONS AND OPTIONS LIST==========-->
             <div class="quiz_questions">
